--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
